--- a/themes/climatecolab-theme/src/main/webapp/css/style/pages/_proposals.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/style/pages/_proposals.scss
@@ -239,6 +239,7 @@
 
 .propbox.featured {
   background: $lightest-grey;
+  border-bottom: 1px solid $light-grey;
 }
 
 .propbox.top {
